# crank

./: .travis.yml  README.rst  pyproject.toml  setup.py
.github/workflows/: pytest.yml
crank/: dispatchstate.py  objectdispatcher.py  restdispatcher.py  util.py
tests/: test_dispachstate.py  test_dispatcher.py  test_objectdispatcher.py  test_restdispatcher.py  test_util.py
